--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:titleTextColor">?colorAccent</item>
         <item name="settings_icon_color">@color/light_settings_icon</item>
         <item name="backgroundPrefs">@color/dark_icon</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
@@ -29,6 +30,7 @@
         <item name="android:titleTextColor">?colorAccent</item>
         <item name="settings_icon_color">@color/dark_settings_icon</item>
         <item name="backgroundPrefs">?colorPrimary</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
     <style name="AppTheme.Dark.Glass" parent="Theme.AppCompat.NoActionBar">
@@ -44,5 +46,6 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="settings_icon_color">@color/glass_settings_icon</item>
         <item name="backgroundPrefs">?colorPrimary</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 </resources>
