--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="settings_icon_color">@color/light_settings_icon</item>
         <item name="backgroundPrefs">?colorPrimary</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="preferenceTheme">@style/PreferenceFixTheme.Light</item>
     </style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -28,6 +29,7 @@
         <item name="settings_icon_color">@color/dark_settings_icon</item>
         <item name="backgroundPrefs">?colorPrimary</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="preferenceTheme">@style/PreferenceFixTheme</item>
     </style>
 
     <style name="AppTheme.Dark.Glass" parent="Theme.AppCompat.NoActionBar">
@@ -43,6 +45,7 @@
         <item name="settings_icon_color">@color/glass_settings_icon</item>
         <item name="backgroundPrefs">?colorPrimary</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="preferenceTheme">@style/PreferenceFixTheme</item>
     </style>
     
     <style name="CardStyle.Light" parent="CardView.Light">
