--- a/app/src/main/res/layout/dialog_full_view.xml
+++ b/app/src/main/res/layout/dialog_full_view.xml
@@ -1,25 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
     android:layout_gravity="bottom">
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
-        android:text="@string/title_fullview"/>
+        android:text="@string/title_fullview"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:gravity="end"
+            android:src="@drawable/ic_reset"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
+    </RelativeLayout>
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:layout_weight="1">
         <TextView
-            android:paddingTop="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textIsSelectable="true"
             android:textSize="16sp"
-            style="@style/Base.TextAppearance.AppCompat.Subhead"/>
+            style="@style/Base.TextAppearance.AppCompat.Subhead"
+            tools:text="@string/large_text"/>
     </android.support.v4.widget.NestedScrollView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+    <Button
+        android:id="@+id/button_save_patch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_save"
+        android:background="?selectableItemBackground"
+        android:textColor="?settings_icon_color" />
 </LinearLayout>
