--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -16,8 +16,7 @@
             android:id="@+id/appbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:theme="?attr/app_bar_overlay">
+            android:fitsSystemWindows="true">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
