--- a/app/src/main/res/layout/drawer_tab_item.xml
+++ b/app/src/main/res/layout/drawer_tab_item.xml
@@ -17,7 +17,8 @@
         android:paddingStart="16dp"
         android:paddingTop="12dp"
         android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        style="@style/TextAppearance.AppCompat.Body1"/>
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/drawer_item_close"
