--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -4,19 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <FrameLayout
         android:id="@+id/fragments_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_bar" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:layout_alignParentBottom="true"
+        android:background="?colorPrimary"
+        app:title="@string/title_fullview" />
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/menu_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:itemIconTint="@android:color/darker_gray">
+        android:fitsSystemWindows="true">
 
         <LinearLayout
             android:id="@+id/menu_drawer_content"
