--- a/app/src/main/res/layout/dialog_full_view.xml
+++ b/app/src/main/res/layout/dialog_full_view.xml
@@ -1,37 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom">
-    <RelativeLayout
-        android:orientation="horizontal"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/caption_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
-        android:text="@string/title_fullview"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:gravity="end"
-            android:src="@drawable/ic_reset"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
-    </RelativeLayout>
+        android:layout_height="?actionBarSize"
+        android:background="?colorPrimary"
+        android:elevation="4dp"
+        app:title="@string/title_fullview" />
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:layout_weight="1">
