--- a/app/src/main/res/layout/tab_drawer_header.xml
+++ b/app/src/main/res/layout/tab_drawer_header.xml
@@ -1,50 +1,35 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_header_container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <!--<ImageView
-        android:id="@+id/drawer_header_background"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/melissa"/>-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/drawer_header_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:src="@drawable/ic_list"/>
-
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/drawer_header_nick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@+id/drawer_header_avatar"
-        android:layout_toStartOf="@+id/drawer_header_open_link"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:lines="1"
-        android:text="@string/title_list_of_rules"
-        style="@style/TextAppearance.AppCompat.Title"/>
-
-    <android.support.v7.widget.AppCompatImageButton
-        android:id="@+id/drawer_header_open_link"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:background="?colorPrimary"
+    android:descendantFocusability="blocksDescendants"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/linearLayout">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
+            <TextView
+                android:id="@+id/nick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TextAppearance.AppCompat.Body1" />
+        </LinearLayout>
+    <ImageButton
+        android:id="@+id/popup_menu"
+        android:src="@drawable/ic_more_vert"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        app:srcCompat="@drawable/ic_add" />
-    </RelativeLayout>
-</LinearLayout>
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_alignParentEnd="true"
+        android:background="?selectableItemBackgroundBorderless"/>
+</RelativeLayout>
