--- a/app/src/main/res/menu/menu_about.xml
+++ b/app/src/main/res/menu/menu_about.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_help"
+        android:title="@string/title_activity_help"
+        android:icon="@drawable/ic_help"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/action_schedule_update"
         android:title="@string/action_refresh"
         android:icon="@drawable/ic_refresh"
