--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -282,6 +282,93 @@
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/about_radiationx_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="2dp"
+                android:foreground="@drawable/ripple"
+                android:clickable="true"
+                style="?attr/cardStyle">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/radiationx_img"
+                            android:layout_width="match_parent"
+                            android:layout_height="180dp"
+                            android:scaleType="centerCrop"
+                            android:clickable="true"
+                            android:src="@drawable/htc_wallp"/>
+                        <ru.SnowVolf.pcompiler.ui.widget.CircleImageView
+                            android:src="@drawable/radiationx"
+                            android:id="@+id/radiationx_profile_img"
+                            android:layout_width="108dp"
+                            android:layout_height="108dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_marginTop="125dp"
+                            app:civ_border_color="?colorAccent"
+                            app:civ_border_width="2dp" />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_toRightOf="@id/radiationx_profile_img"
+                            android:layout_marginTop="185dp">
+                            <TextView
+                                android:id="@+id/evgeniy_nizamiev"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/radiationx_name"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/evgeniy_nizamiev_role"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/radiationx_role"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/radiationx_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16sp"
+                        android:text="@string/radiationx_role_description"
+                        android:textSize="14sp" />
+                    <!--RADIATIONX LINKS  -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="10sp">
+                        <Button
+                            android:id="@+id/about_radiationx_pda_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="4PDA"
+                            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
+                        <Button
+                            android:id="@+id/about_radiationx_github_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="GitHub"
+                            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
     </RelativeLayout>
 
