Top toolbar navigation, layout fixes. Fixed update installation on android 8 (oreo)

--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -42,7 +42,7 @@
         <item name="colorAccent">@color/glass_colorAccent</item>
         <item name="android:windowBackground">@color/glass_windowBackground</item>
         <item name="icon_color">?colorAccent</item>
-        <item name="android:colorControlHighlight">@color/control_hl</item>
+        <item name="android:colorControlHighlight">@color/black_control_hl</item>
         <item name="android:listDivider">@null</item>
         <item name="cardStyle">@style/CardStyle.Dark.Glass</item>
         <item name="android:windowLightStatusBar">false</item>
