--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,7 +39,7 @@
         <item name="colorAccent">@color/glass_colorAccent</item>
         <item name="android:windowBackground">@color/glass_windowBackground</item>
         <item name="icon_color">@android:color/white</item>
-        <item name="android:colorControlHighlight">@color/control_hl</item>
+        <item name="android:colorControlHighlight">@color/black_control_hl</item>
         <item name="android:listDivider">@null</item>
         <item name="cardStyle">@style/CardStyle.Dark.Glass</item>
         <item name="settings_icon_color">@color/glass_settings_icon</item>
