--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -7,24 +7,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:fitsSystemWindows="true"
-            android:background="?colorPrimary"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:elevation="4dp"
-            app:title="@string/app_name"
-            app:navigationIcon="@drawable/ic_drawer_menu"/>
     <FrameLayout
         android:id="@+id/fragments_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="4dp"
-        android:layout_above="@+id/bottom_bar"
-        android:layout_below="@id/toolbar"/>
+        android:layout_above="@+id/bottom_bar" />
     <android.support.v7.widget.Toolbar
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
