--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -10,8 +10,7 @@
         android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:layout_above="@+id/bottom_bar">
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar_layout"
@@ -28,24 +27,11 @@
                 app:statusBarScrim="@android:color/transparent"
                 app:titleEnabled="false">
 
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/toolbar_image_background"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax" />
-
-                <ViewStub
-                    android:id="@+id/toolbar_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true" />
-
-
-                <android.support.v7.widget.Toolbar
+                <ru.SnowVolf.girl.ui.GirlToolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    android:elevation="4dp"
                     app:contentInsetEndWithActions="0dp"
                     app:contentInsetStart="0dp"
                     app:contentInsetStartWithNavigation="0dp"
@@ -72,7 +58,7 @@
                                 style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"/>
                         </LinearLayout>
 
-                </android.support.v7.widget.Toolbar>
+                </ru.SnowVolf.girl.ui.GirlToolbar>
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -80,13 +66,9 @@
 
         <FrameLayout
             android:id="@+id/fragment_content"
+            android:layout_marginTop="?actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.design.widget.CoordinatorLayout>
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/bottom_bar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:layout_alignParentBottom="true"
-        app:title="@string/title_fullview" />
+
 </RelativeLayout>
