--- a/app/src/main/res/layout/tab_indicator.xml
+++ b/app/src/main/res/layout/tab_indicator.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notify_dot"
     android:layout_width="?attr/actionBarSize"
     android:layout_height="?attr/actionBarSize"
+    android:descendantFocusability="blocksDescendants"
     app:layout_collapseMode="pin">
     <ImageView
         android:src="@drawable/ic_drawer_menu"
@@ -11,25 +13,23 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/drawer_item_count"
+        <TextView
+            android:id="@+id/drawer_tabs_count"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="20dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="2dp"
-            android:layout_marginStart="2dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginStart="6dp"
             android:background="@drawable/dot_indicator"
             android:gravity="center"
-            android:minWidth="24dp"
-            android:paddingEnd="2dp"
-            android:paddingStart="2dp"
-            android:layout_marginBottom="4dp"
-            android:text="@string/tabs"
+            android:minWidth="20dp"
+            android:paddingEnd="6dp"
+            android:paddingStart="6dp"
+            android:layout_marginBottom="10dp"
             android:maxLines="1"
-            android:textAllCaps="true"
-            android:textSize="10sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:layout_alignParentBottom="true"
-            style="@style/TextAppearance.AppCompat.Title.Inverse"/>
+            android:textColor="?colorPrimary" />
 </RelativeLayout>
