--- a/app/src/main/res/menu/menu_view_dialog.xml
+++ b/app/src/main/res/menu/menu_view_dialog.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_edit"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/menu_edit"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/action_reset"
         android:icon="@drawable/ic_reset"
         android:title="@string/menu_reset"
         app:showAsAction="always"/>
-    <!--<item-->
-        <!--android:title=""-->
-        <!--android:enabled="false"-->
-        <!--app:showAsAction="always"/>-->
+
     <item
         android:id="@+id/action_full_view"
         android:icon="@drawable/ic_chevron_down"
