--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,4 +12,7 @@
         <attr name="civ_border_overlay" format="boolean"/>
         <attr name="civ_fill_color" format="color"/>
     </declare-styleable>
+    <declare-styleable name="GirlButton">
+        <attr name="insert" format="string"/>
+    </declare-styleable>
 </resources>
