--- a/app/src/main/res/layout/fragment_script_executor.xml
+++ b/app/src/main/res/layout/fragment_script_executor.xml
@@ -7,6 +7,41 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
+            <ImageView
+                android:id="@+id/drawer_header_avatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="6dp"
+                android:src="@drawable/ic_file"/>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/drawer_header_nick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@+id/drawer_header_avatar"
+                android:layout_toStartOf="@+id/add"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:lines="1"
+                style="@style/Base.TextAppearance.AppCompat.Title"/>
+
+            <ImageButton
+                android:id="@+id/add"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:src="@drawable/ic_add" />
+        </RelativeLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -16,48 +51,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_name">
-            <ru.SnowVolf.girl.ui.GirlEditText
-                android:id="@+id/field_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_target"
-                android:layout_toStartOf="@+id/variants">
+                android:hint="@string/hint_script"
+                android:layout_toStartOf="@id/checkBoxContainer">
                 <ru.SnowVolf.girl.ui.GirlEditText
-                    android:id="@+id/field_target"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </android.support.design.widget.TextInputLayout>
-            <ImageButton
-                android:id="@+id/variants"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_expand_more"
-                android:background="?selectableItemBackgroundBorderless"
-                style="@style/Base.Widget.AppCompat.Button.Small"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_find"
-                android:layout_toStartOf="@+id/checkBoxContainer">
-                <ru.SnowVolf.girl.ui.GirlEditText
-                    android:id="@+id/field_find"
+                    android:id="@+id/field_script"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
@@ -70,7 +74,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true">
                 <CheckBox
-                    android:id="@id/checkbox_regex"
+                    android:id="@+id/checkbox_smali"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
@@ -82,12 +86,30 @@
                     android:textColor="?colorAccent"/>
             </LinearLayout>
         </RelativeLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint_main_class">
+                <ru.SnowVolf.girl.ui.GirlEditText
+                    android:id="@+id/field_main_class"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_replace">
+            android:hint="@string/hint_entrance">
             <ru.SnowVolf.girl.ui.GirlEditText
-                android:id="@+id/field_replace"
+                android:id="@+id/field_entrance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_param">
+            <ru.SnowVolf.girl.ui.GirlEditText
+                android:id="@+id/field_param"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
