--- a/app/src/main/res/menu/menu_view_dialog.xml
+++ b/app/src/main/res/menu/menu_view_dialog.xml
@@ -5,6 +5,7 @@
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_edit"
         android:title="@string/menu_edit"
+        android:visible="false"
         app:showAsAction="always"/>
 
     <item
