--- a/app/src/main/res/layout/content_updater.xml
+++ b/app/src/main/res/layout/content_updater.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
+<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/scroll2"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -49,4 +49,4 @@
             android:padding="16dp"/>
 
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
