--- a/app/src/main/res/layout/dialog_font_size.xml
+++ b/app/src/main/res/layout/dialog_font_size.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:padding="24dp">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/value_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,7 +12,7 @@
         android:text="-1"
         style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
 
-    <android.support.v7.widget.AppCompatSeekBar
+    <androidx.appcompat.widget.AppCompatSeekBar
         android:id="@+id/value_seekbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
