--- a/app/src/main/res/layout/dialog_full_view.xml
+++ b/app/src/main/res/layout/dialog_full_view.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/caption_bar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="?colorPrimary"
         android:elevation="4dp"
         app:title="@string/title_fullview" />
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingStart="16dp"
@@ -28,7 +28,7 @@
             android:textIsSelectable="true"
             style="@style/Base.TextAppearance.AppCompat.Subhead"
             tools:text="@string/large_text"/>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
