--- a/app/src/main/res/layout/drawer_header_layout.xml
+++ b/app/src/main/res/layout/drawer_header_layout.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/drawer_header_nick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
         android:textStyle="bold"
         android:lines="1" />
 
-    <android.support.v7.widget.AppCompatImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/drawer_header_open_link"
         android:layout_width="48dp"
         android:layout_height="48dp"
