--- a/app/src/main/res/layout/drawer_menu_item.xml
+++ b/app/src/main/res/layout/drawer_menu_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="48dp">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/drawer_item_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -19,7 +19,7 @@
         android:textStyle="bold"
         style="@style/TextAppearance.AppCompat.Body1"/>
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/drawer_item_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
