--- a/app/src/main/res/layout/drawer_tab_item.xml
+++ b/app/src/main/res/layout/drawer_tab_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/drawer_item_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
         android:textStyle="bold"
         style="@style/TextAppearance.AppCompat.Body1"/>
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/drawer_item_close"
         android:layout_width="48dp"
         android:layout_height="48dp"
