--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -42,7 +42,7 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/toolbar_title"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
                                 android:maxLines="1"
                                 style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/toolbar_subtitle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
