--- a/app/src/main/res/layout/fragment_regex_spur.xml
+++ b/app/src/main/res/layout/fragment_regex_spur.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -9,4 +9,4 @@
         android:layout_margin="8dp"
         android:textIsSelectable="true"
         style="@style/TextAppearance.AppCompat.Body1"/>
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
