--- a/app/src/main/res/layout/fragment_script_executor.xml
+++ b/app/src/main/res/layout/fragment_script_executor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -19,7 +19,7 @@
                 android:layout_marginStart="6dp"
                 android:src="@drawable/ic_file"/>
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/drawer_header_nick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,4 +115,4 @@
         </android.support.design.widget.TextInputLayout>
         <include layout="@layout/button_bar"/>
     </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
